# zebra-doctor

./: .gitignore  notebook.IPYNB  script.py
heart/: Cargo.toml  run_single_rocksdb_test.csv  run_transaction_size_single_rocksdb.csv
heart/backup/: tables
heart/src/: helpers.rs  main.rs
node/: Cargo.toml  Dockerfile
node/backup/: store  tables
node/src/: database_runner.rs  lib.rs  server.rs
results/: transaction_size_no_backup.csv  transaction_size_no_backup_cpu_stats.csv  transaction_size_no_backup_dashmap.csv  transaction_size_no_backup_dashmap_cpu_stats.csv  transaction_size_okaywal.csv  transaction_size_okaywal_cpu_stats.csv  transaction_size_pickledb.csv  transaction_size_pickledb_cpu_stats.csv  transaction_size_rocksdb_wal.csv  transaction_size_rocksdb_wal_cpu_stats.csv  transaction_size_with_file_backup.csv  transaction_size_with_file_backup_cpu_stats.csv  write_percentage_no_backup.csv  write_percentage_no_backup_cpu_stats.csv  write_percentage_no_backup_dashmap.csv  write_percentage_no_backup_dashmap_cpu_stats.csv  write_percentage_okaywal.csv  write_percentage_okaywal_cpu_stats.csv  write_percentage_pickledb.csv  write_percentage_pickledb_cpu_stats.csv  write_percentage_rocksdb_wal.csv  write_percentage_rocksdb_wal_cpu_stats.csv  write_percentage_with_file_backup.csv  write_percentage_with_file_backup_cpu_stats.csv
simple_results/: simple_file_backup.csv  simple_file_backup_cpu_stats.csv  simple_no_backup.csv  simple_no_backup_cpu_stats.csv  simple_no_backup_dashmap.csv  simple_no_backup_dashmap_cpu_stats.csv  simple_okaywal.csv  (+8 more)
